--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,99 @@
 @import url("https://fonts.googleapis.com/css?family=Dosis");
-* { box-sizing: border-box; margin: 0; padding: 0; font-family: Dosis; list-style-type: none; border: none; }
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Dosis;
+  list-style-type: none;
+  border: none;
+}
 
-main { background: url(https://images.pexels.com/photos/421927/pexels-photo-421927.jpeg?w=1920&h=1080&auto=compress&cs=tinysrgb) no-repeat center/cover; height: 100vh; }
+main {
+  background: url(https://images.pexels.com/photos/2255/black-and-white-city-houses-skyline.jpg?auto=compress&cs=tinysrgb&h=1631&w=2446) no-repeat center/cover;
+  height: 100vh;
+  color: #000;
+}
 
-main .container { margin: 0 auto; max-width: 600px; max-height: 100vh; }
+main .container {
+  margin: 0 auto;
+  max-width: 1000px;
+  max-height: 100vh;
+}
 
-main .container h1 { padding: 60px 20px 30px; text-align: center; }
+main .container h1 {
+  padding: 60px 20px 30px;
+  text-align: center;
+  color: #7800FF;
+}
 
-main .container button { margin: 20px auto; display: block; }
+main .container input {
+  display: block;
+  margin: 20px auto 30px;
+  background: inherit;
+  outline: none !important;
+  border-bottom: .5px solid #fff;
+  padding: 5px 10px;
+  font-size: 20px;
+  color: #7800FF;
+  line-height: 25px;
+  width: 230px;
+  text-align: center;
+  cursor: pointer;
+}
 
-main .container input { display: block; margin: 20px auto 42vh; background: inherit; outline: none !important; border-bottom: .5px solid #fff; padding: 5px 10px; font-size: 20px; color: #fff; line-height: 25px; width: 230px; text-align: center; }
+main .container input::placeholder {
+  color: #7800FF;
+}
 
-main .container input::placeholder { color: #fff; }
+main .container input:focus::placeholder {
+  opacity: .5;
+}
 
-main .container input:focus::placeholder { opacity: .5; }
+main .container input:focus {
+  border: .5px solid #fff;
+  border-radius: 10px;
+}
 
-main .container input:focus { border: .5px solid #fff; border-radius: 10px; }
+main .container .row {
+  max-height: 200px;
+  overflow-y: auto;
+}
 
-main .container .row { max-height: 190px; overflow-y: auto; }
+main .container .row [class^="col-"] {
+  float: left;
+}
 
-main .container .row [class^="col-"] { float: left; }
+main .container .row [class^="col-"] h2 {
+  padding-bottom: 10px;
+}
 
-main .container .row [class^="col-"] h2 { padding-bottom: 10px; }
+main .container .row [class^="col-"] li {
+  font-size: 18px;
+  line-height: 25px;
+}
 
-main .container .row [class^="col-"] li { font-size: 18px; line-height: 25px; }
+main .container .row [class^="col-"] #countries li {
+  text-align: right;
+  padding-right: 15px;
+}
 
-main .container .row [class^="col-"] #countries li { text-align: right; padding-right: 15px; }
+main .container .row [class^="col-"] #capitals li {
+  text-align: left;
+  padding-left: 15px;
+}
 
-main .container .row [class^="col-"] #capitals li { text-align: left; padding-left: 15px; }
+main .container .row [class^="col-"] .right {
+  text-align: right;
+  padding-right: 15px;
+}
 
-main .container .row [class^="col-"] .right { text-align: right; padding-right: 15px; }
+main .container .row [class^="col-"] .left {
+  text-align: left;
+  padding-left: 15px;
+}
 
-main .container .row [class^="col-"] .left { text-align: left; padding-left: 15px; }
+.col-6 {
+  width: 50%;
+}
 
-.col-6 { width: 50%; }
+/*# sourceMappingURL=style.css.map */
